CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MY_PROJ)

SET(CMAKE_C_COMPILER "gcc")

OPTION(GENERATE_TEST_FILE "Generate libries test files" OFF)

# Libraries building related
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/lib/bitmap)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/lib/min_heap)

# Main program building related
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
