INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/bitmap)

# Generate libs
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(bitmap bitmap.c)

# Test program
if (GENERATE_TEST_FILE)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
	ADD_EXECUTABLE(test_bitmap test_bitmap.c)
	TARGET_LINK_LIBRARIES(test_bitmap bitmap)
endif (GENERATE_TEST_FILE)
